--- a/AuroraDreamband/app/src/main/AndroidManifest.xml
+++ b/AuroraDreamband/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.auroradreamband">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="com.dreambandsdk.DreambandBLEService"
+            android:enabled="true" />
+        <service
+            android:name="com.dreambandsdk.BleAdapterService"
+            android:enabled="true" />
     </application>
 
 </manifest>
