--- a/AuroraDreamband/dreambandsdk/build.gradle
+++ b/AuroraDreamband/dreambandsdk/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -19,6 +19,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -28,5 +33,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'no.nordicsemi.android.support.v18:scanner:0.2.0'
+    compile 'org.greenrobot:eventbus:3.1.1'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.polidea.rxandroidble:rxandroidble:1.4.3'
     testCompile 'junit:junit:4.12'
 }
