--- a/aurorasdk/src/main/AndroidManifest.xml
+++ b/aurorasdk/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.dreambandsdk">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.aurorasdk">
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
