--- a/aurorasdk/build.gradle
+++ b/aurorasdk/build.gradle
@@ -33,7 +33,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.github.markrileybot.heatshrink:heatshrink-java:0.1.1'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.polidea.rxandroidble:rxandroidble:1.4.3'
+    compile 'no.nordicsemi.android:ble:1.0.0'
     testCompile 'junit:junit:4.12'
 }
