--- a/aurorasdk/build.gradle
+++ b/aurorasdk/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    //For bintray and jcenter distribution
+    bintrayRepo = 'maven'
+    bintrayName = 'aurorasdk'
+
+    publishedGroupId = 'com.iwinks'
+    libraryName = 'Aurora Dreamband SDK'
+    artifact = 'aurorasdk'
+
+    libraryDescription = 'Official SDK for Aurora Dreamband.'
+
+    siteUrl = 'https://github.com/iwinks/aurora-sdk-android'
+    gitUrl = 'https://github.com/iwinks/aurora-sdk-android.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'iwinks'
+    developerName = 'Andrew Smiley'
+    developerEmail = 'andrew@iwinks.org'
+    licenseName = 'MIT'  //Example for license
+    licenseUrl = 'https://opensource.org/licenses/MIT'
+    allLicenses = ["MIT"]
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion '26.0.2'
@@ -24,6 +48,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
 }
 
 dependencies {
@@ -36,3 +62,6 @@ dependencies {
     compile 'no.nordicsemi.android:ble:1.0.0'
     testCompile 'junit:junit:4.12'
 }
+
+apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/installv.gradle'
+apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/bintrayv.gradle'
