Nordic ble library poc (#5)
* New implementation using nordics BLE manager library.

* New auto-retry for failed commands.

* Finished retry mechanism.

* Fixed bug preventing failed CRC in readFile command from triggering retry.

* Attempt to fix race condition in onReadCharacteristic

* Switched output to use notifications now that things are stable.

* Preparing to release on bintray and jcenter.

--- a/aurorasdk/build.gradle
+++ b/aurorasdk/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    //For bintray and jcenter distribution
+    bintrayRepo = 'maven'
+    bintrayName = 'aurorasdk'
+
+    publishedGroupId = 'com.iwinks'
+    libraryName = 'Aurora Dreamband SDK'
+    artifact = 'aurorasdk'
+
+    libraryDescription = 'Official SDK for Aurora Dreamband.'
+
+    siteUrl = 'https://github.com/iwinks/aurora-sdk-android'
+    gitUrl = 'https://github.com/iwinks/aurora-sdk-android.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'iwinks'
+    developerName = 'Andrew Smiley'
+    developerEmail = 'andrew@iwinks.org'
+    licenseName = 'MIT'  //Example for license
+    licenseUrl = 'https://opensource.org/licenses/MIT'
+    allLicenses = ["MIT"]
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion '26.0.2'
@@ -24,6 +48,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
 }
 
 dependencies {
@@ -33,7 +59,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.github.markrileybot.heatshrink:heatshrink-java:0.1.1'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.polidea.rxandroidble:rxandroidble:1.4.3'
+    compile 'no.nordicsemi.android:ble:1.0.0'
     testCompile 'junit:junit:4.12'
 }
+
+apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/installv.gradle'
+apply from: 'https://raw.githubusercontent.com/numetriclabz/jcenter/master/bintrayv.gradle'
