--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,22 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
 
+libraryVersion = 1.0.0
+libraryName = aurorasdk
+libraryDescription = Official SDK for the Aurora Dreamband.
+publishedGroupId = com.iwinks
+artifact = aurorasdk
+bintrayRepo = maven
+bintrayName = aurorasdk
+siteUrl = https://github.com/iwinks/aurora-sdk-android
+gitUrl = https://github.com/iwinks/aurora-sdk-android.git
+developerId = iwinks
+developerName = Andrew Smiley
+developerEmail = andrew@iwinks.org
+licenseName = MIT
+licenseUrl = https://opensource.org/licenses/MIT
+allLicenses = ["MIT"]
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
